# codex-usage-dock

./: LICENSE  README.md  index.html  package-lock.json  package.json
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugins/codex-usage-dock/: README.md
plugins/codex-usage-dock/.codex-plugin/: plugin.json
plugins/codex-usage-dock/scripts/: launch.ps1  launch.sh
plugins/codex-usage-dock/skills/codex-usage-dock/: SKILL.md
src/: App.css  App.tsx  format.test.ts  format.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_server.rs  lib.rs  main.rs  usage.rs  window_tracker.rs
