[package]
name = "codex-usage-dock"
version = "0.1.0"
description = "A floating Codex usage monitor for macOS and Windows"
authors = ["Nossen"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Nossen/codex-usage-dock"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codex_usage_dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.11"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
tauri-plugin-single-instance = "2"
